v0.4/guides/core-concepts/error-handling.mdx
---
title: "Error Handling"
description: "How Bejibun catches exceptions and turns them into consistent JSON responses."
icon: "triangle-exclamation"
---

Bejibun routes every uncaught error through a central **exception handler**, which converts framework exceptions into
consistent JSON responses and logs them automatically.

## The exception handler

Each application has `app/exceptions/handler.ts`, extending the framework's `ExceptionHandler`:

```ts app/exceptions/handler.ts
import ExceptionHandler from "@bejibun/core/exceptions/ExceptionHandler";

export default class Handler extends ExceptionHandler {
    public handle(error: any): globalThis.Response {
        // add custom handling here, then fall back to the default

        return super.handle(error);
    }
}
```

<Warning>
    This file is required -- the server throws on startup if `app/exceptions/handler.ts` is missing.
</Warning>

## How errors are mapped

When an error reaches the handler, it is logged (`Logger.setContext("APP").error(message).trace(stack)`) and converted
to a response:

| Error                       | Response status                     |
| --------------------------- | ----------------------------------- |
| `DiskException`             | its `.code` (disk error)            |
| `ModelNotFoundException`    | its `.code` (not found)             |
| `RateLimiterException`      | its `.code` (too many requests)     |
| `RouterException`           | its `.code`                         |
| `RuntimeException`          | its `.code`                         |
| `ValidatorException`        | its `.code` (validation failed)     |
| Any other error             | `500` -- `"Internal server error."` |

Every error response uses the standard envelope:

```json
{
    "data": null,
    "message": "No query results for model [UserModel] [999].",
    "status": 404
}
```

## Common framework exceptions

<AccordionGroup>
    <Accordion title="ModelNotFoundException" icon="magnifying-glass">
        Thrown by `Model.findOrFail(id)` when no record matches. Use it to get a clean not-found response without manual
        checks.

        ```ts
        const user = await UserModel.findOrFail(id); // throws if missing
        ```
    </Accordion>
    <Accordion title="ValidatorException" icon="circle-xmark">
        Thrown by `super.validate(...)` when input fails validation. The message is the first failing rule's message.
    </Accordion>
    <Accordion title="RateLimiterException" icon="gauge-high">
        Thrown when a client exceeds the configured rate limit (see
        [config](/v0.4/guides/getting-started/configuration#rate-limiter-configuration)).
    </Accordion>
</AccordionGroup>

## Throwing your own errors

Throw a framework exception (or any `Error`) from anywhere in a request; the handler will catch it:

```ts
import RuntimeException from "@bejibun/core/exceptions/RuntimeException";

if (!allowed) {
    throw new RuntimeException("You are not allowed to do that.");
}
```

To customize behavior -- for example, to report errors to an external service -- add logic in `Handler.handle()` before
calling `super.handle(error)`.

## Serving static files & 404s

Requests that don't match a route fall through to the handler's `publicRoute`, which serves matching files from
`public/` or returns a `404` (or `204` for `OPTIONS`).