v0.6/guides/core-concepts/error-handling.mdx
---
title: "Error Handling"
description: "How Bejibun catches exceptions and turns them into consistent JSON responses."
icon: "triangle-exclamation"
---

Bejibun routes every uncaught error through a central **exception handler**, which converts framework exceptions into
consistent JSON responses and logs them automatically.

## The exception handler

Each application has `app/exceptions/handler.ts`, extending the framework's `ExceptionHandler`:

```ts app/exceptions/handler.ts
import ExceptionHandler from "@bejibun/core/exceptions/ExceptionHandler";

export default class Handler extends ExceptionHandler {
    public handle(error: any): globalThis.Response {
        // add custom handling here, then fall back to the default

        return super.handle(error);
    }
}
```

<Warning>
    This file is required -- the server throws on startup if `app/exceptions/handler.ts` is missing.
</Warning>

## How errors are mapped

When an error reaches the handler, it is logged (`Logger.setContext("APP").error(message).trace(stack)`) and converted
to a response. Framework exceptions respond with their own `.code`; anything else becomes a generic `500`:

| Exception                     | Default status | Source                                                  |
| ----------------------------- | -------------- | ------------------------------------------------------- |
| `ModelNotFoundException`      | `404`          | `@bejibun/core`                                         |
| `ValidatorException`          | `422`          | `@bejibun/core`                                         |
| `RateLimiterException`        | `429`          | `@bejibun/limiter`                                      |
| `QueueException`              | `500`          | `@bejibun/core`                                         |
| `RouterException`             | `500`          | `@bejibun/core`                                         |
| `RuntimeException`            | `500`          | `@bejibun/core`                                         |
| Objection `ValidationError`   | `statusCode`   | `objection`                                             |
| Any other error               | `500`          | `"Internal server error."`                              |

Every status code can be overridden at throw time by passing a `code` argument, and every exception logs itself on
construction.

<Note>
    As of `@bejibun/core` v0.6.0, `DiskException` was removed from core when the `Storage` facade moved to
    [`@bejibun/storage`](/v0.6/guides/storage/file-storage), which now ships `StorageException`.
    `RateLimiterException` similarly ships with [`@bejibun/limiter`](/v0.6/guides/security/rate-limiting) and is still
    mapped by the handler.
    `QueueException` was added in v0.6.1 for queue configuration and job-handling failures -- see
    [Queues & Jobs](/v0.6/guides/background/queues).
</Note>

Every error response uses the standard envelope:

```json
{
    "data": null,
    "message": "No query results for model [UserModel] [999].",
    "status": 404
}
```

## Common framework exceptions

<AccordionGroup>
    <Accordion title="ModelNotFoundException" icon="magnifying-glass">
        Thrown by `Model.findOrFail(id)` when no record matches. Use it to get a clean not-found response without manual
        checks.

        ```ts
        const user = await UserModel.findOrFail(id); // throws if missing
        ```
    </Accordion>
    <Accordion title="ValidatorException" icon="circle-xmark">
        Thrown by `request.validate(...)` when input fails validation. The message is the first failing rule's message.
    </Accordion>
    <Accordion title="RateLimiterException" icon="gauge-high">
        Thrown when a client exceeds the configured rate limit (see
        [config](/v0.6/guides/getting-started/configuration#rate-limiter-configuration)).
    </Accordion>
    <Accordion title="QueueException" icon="list-ol">
        Thrown for queue configuration and job-handling failures -- for example, when no queue config can be resolved
        (neither `config/queue.ts` nor the package default is available).
    </Accordion>
</AccordionGroup>

## Throwing your own errors

Throw a framework exception (or any `Error`) from anywhere in a request; the handler will catch it:

```ts
import RuntimeException from "@bejibun/core/exceptions/RuntimeException";

if (!allowed) {
    throw new RuntimeException("You are not allowed to do that.");
}
```

<Tip>
    As of v0.6.0, `RuntimeException` is also exported from the package root: `import {RuntimeException} from
    "@bejibun/core";`.
</Tip>

To customize behavior -- for example, to report errors to an external service -- add logic in `Handler.handle()` before
calling `super.handle(error)`.

## Serving static files & 404s

Requests that don't match a route fall through to the handler's `publicRoute`, which serves matching files from
`public/` or returns a `404` (or `204` for `OPTIONS`).